--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Remove Background From Your Image</h1>
-      <h4>Upload your image here</h4>
+      <h1>Remove The Background From Your Image</h1>
 
       <form>
         <div class="img">
