changed the colors

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             type="button"
             id="removeBgButton"
             onclick="submitHandler()"
-            style="background-color: #673ab7"
+            style="background-color: #5c196e"
           >
             <span class="btn__text">Upload</span>
           </button>
