--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
       <form>
         <div class="img">
-          <img id="uploadedImage" src="/Images/removebg.jpg" alt="image" />
+          <img id="uploadedImage" src="Images/removebg.jpg" alt="image" />
         </div>
         <div class="btn">
           <input
